--- a/docs/templates/partials/navbar.template.html
+++ b/docs/templates/partials/navbar.template.html
@@ -1,11 +1,11 @@
-{% for doc in docs %}
-	{% if doc.name == 'app' %}
-		{% if doc.dependencies.length %}
+{% for main in docs %}
+	{% if main.name == 'app' %}
+		{% if main.dependencies.length %}
 
 		<h3>Index</h3>
 
 		<ul>
-			{% for dep in doc.dependencies %}
+			{% for dep in main.dependencies %}
 			<li>
 				{$ dep | relativeLink(doc) $}
 			</li>
