--- a/docs/templates/partials/navbar.template.html
+++ b/docs/templates/partials/navbar.template.html
@@ -1,30 +1,28 @@
+
 {% for main in docs %}
 	{% if main.name == 'app' %}
 		{% if main.dependencies.length %}
 
-		<h3>Index</h3>
+		<ul ng-controller="NavController">
 
-		<ul>
 			{% for dep in main.dependencies %}
-			<li>
-				{$ dep | relativeLink(doc) $}
-			</li>
 
+				<!-- module -->
+				<li>
+					{$ dep | relativeLink(doc) $}
 
-			<!-- Services and Controllers for each module -->
-			{% for groupName, group in dep.groups %}
-			{% if group.children.length %}
-			<material-divider></material-divider>
-			<h3>{$ group | relativeLink(doc, group.title) $}</h3>
-			<ul>
-				{% for component in group.children %}
-				<li>{$ component | relativeLink(doc) $}</li>
-				{%- endfor %}
-			</ul>
-			{% endif %}
-			{% endfor %}
-
-
+					<!-- Services and Controllers for each module -->
+					{% for groupName, group in dep.groups %}
+						{% if group.children.length %}
+							<h3>{$ group | relativeLink(doc, group.title) $}</h3>
+							<ul>
+								{% for component in group.children %}
+								<li>{$ component | relativeLink(doc) $}</li>
+								{%- endfor %}
+							</ul>
+						{% endif %}
+					{% endfor %}
+				</li>
 			{% endfor %}
 		</ul>
 		{% endif %}
