--- a/docs/templates/base.template.html
+++ b/docs/templates/base.template.html
@@ -6,116 +6,90 @@
 	<script src="/lib/angular/angular.js"></script>
 	<script src="/lib/angular-animate/angular-animate.js"></script>
 	<script src="/lib/angular-aria/angular-aria.js"></script>
-	<script src="/lib/hammerjs/hammer.js"></script>
 	<script src="/lib/angular-material/angular-material.js"></script>
 	<script src="/lib/angular-material/angular-material.css"></script>
+	<script src="../assets/style/docs.css"></script>
 
 	<script type="text/javascript">
 		angular.module('app', ['ngMaterial', 'ngAnimate', 'ngAria'])
-				.controller('AppCtrl', function ($scope, $timeout, $mdSidenav, $mdUtil, $log) {
-					$scope.toggleLeft = buildToggler('left');
-					$scope.toggleRight = buildToggler('right');
-					/**
-					 * Build handler to open/close a SideNav; when animation finishes
-					 * report completion in console
-					 */
-					function buildToggler(navID) {
-						var debounceFn = $mdUtil.debounce(function () {
-							$mdSidenav(navID)
-									.toggle()
-									.then(function () {
-										$log.debug("toggle " + navID + " is done");
-									});
-						}, 300);
-						return debounceFn;
-					}
-				})
-				.controller('LeftCtrl', function ($scope, $timeout, $mdSidenav, $log) {
-					$scope.close = function () {
-						$mdSidenav('left').close()
-								.then(function () {
-									$log.debug("close LEFT is done");
-								});
-					};
-				})
-				.controller('RightCtrl', function ($scope, $timeout, $mdSidenav, $log) {
-					$scope.close = function () {
-						$mdSidenav('right').close()
-								.then(function () {
-									$log.debug("close RIGHT is done");
-								});
-					};
+				.controller('NavController', function ($scope) {
+					console.log("loaded");
 				});
-
 	</script>
 </head>
-<body
-		layout="vertical"
-		style="width: 100%"
-		class="material-whiteframe-z1">
+<body layout="row" class="material-whiteframe-z1">
 
-<div ng-controller="AppCtrl" layout="column" style="width: 100%;">
-	<md-toolbar>
-		<div class="md-toolbar-tools">
-			<h2>
-				<span>Toolbar with Icon Buttons</span>
-			</h2>
-		</div>
+<md-sidenav class="site-sidenav md-sidenav-left md-whiteframe-z2 md-closed ng-isolate-scope md-locked-open" md-component-id="left" md-is-locked-open="$mdMedia('gt-sm')" tabindex="-1">
+
+	<md-toolbar class="md-whiteframe-glow-z2 md-default-theme">
+		<h1 class="md-toolbar-tools">
+			<a ng-href="#/" layout="row" flex="" class="docs-logo" href="#/">
+				<!--<md-icon md-svg-src="md-menu" class="ng-isolate-scope md-default-theme" aria-hidden="true">-->
+					<!--<svg version="1.1" x="0px" y="0px" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" fit="" height="100%" width="100%" preserveAspectRatio="xMidYMid meet" style="pointer-events: none; display: block;">-->
+						<!--<path d="M 50 0 L 100 14 L 92 80 L 50 100 L 8 80 L 0 14 Z" fill="#b2b2b2"></path>-->
+						<!--<path d="M 50 5 L 6 18 L 13.5 77 L 50 94 Z" fill="#E42939"></path>-->
+						<!--<path d="M 50 5 L 94 18 L 86.5 77 L 50 94 Z" fill="#B72833"></path>-->
+						<!--<path d="M 50 7 L 83 75 L 72 75 L 65 59 L 50 59 L 50 50 L 61 50 L 50 26 Z" fill="#b2b2b2"></path>-->
+						<!--<path d="M 50 7 L 17 75 L 28 75 L 35 59 L 50 59 L 50 50 L 39 50 L 50 26 Z" fill="#fff"></path>-->
+					<!--</svg>-->
+				<!--</md-icon>-->
+				<div class="docs-logotype">Material Design</div>
+			</a>
+		</h1>
 	</md-toolbar>
-	<section layout="row" flex>
-		<md-sidenav class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="$mdMedia('gt-md')">
-			<md-toolbar class="md-theme-indigo">
-				<h1 class="md-toolbar-tools">Sidenav Left</h1>
-			</md-toolbar>
-			<md-content layout-padding ng-controller="LeftCtrl">
-				<md-button ng-click="close()" class="md-primary" hide-gt-md>
-					Close Sidenav Left
-				</md-button>
-				<p hide-md show-gt-md>
-					{% include "partials/navbar.template.html" %}
-				</p>
-			</md-content>
-		</md-sidenav>
-		<md-content flex layout-padding>
 
-			<div layout="column" layout-fill layout-align="top center">
-				<p>
-					{% block body%}{% endblock %}
-				</p>
+	<md-content flex="" role="navigation" class="md-default-theme">
+		{% include "partials/navbar.template.html" %}
+	</md-content>
+</md-sidenav>
 
-				<div>
-					<md-button ng-click="toggleLeft()"
-										 class="md-primary" hide-gt-md>
-						Toggle left
-					</md-button>
-				</div>
-				<div>
-					<md-button ng-click="toggleRight()"
-										 class="md-primary">
-						Toggle right
-					</md-button>
-				</div>
+<div layout="column" tabindex="-1" role="main" flex>
+
+	<md-toolbar class="md-whiteframe-glow-z2 md-default-theme">
+		<div class="md-toolbar-tools docs-toolbar-tools" ng-click="openMenu()" tabindex="-1" style="padding-left: 8px;" role="button">
+			<button class="md-icon-button md-button md-default-theme" ng-transclude="" hide-gt-sm="" aria-label="Toggle Menu">
+				<md-icon md-svg-src="img/icons/ic_menu_24px.svg" class="ng-scope ng-isolate-scope md-default-theme" aria-hidden="true">
+					<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="100%" height="100%" viewBox="0 0 24 24" enable-background="new 0 0 24 24" xml:space="preserve" fit="" preserveAspectRatio="xMidYMid meet" style="pointer-events: none; display: block;">
+<g id="Header">
+    <g>
+        <rect x="-618" y="-2232" fill="none" width="1400" height="3600"></rect>
+    </g>
+</g>
+<g id="Label">
+</g>
+<g id="Icon">
+    <g>
+        <rect fill="none" width="24" height="24"></rect>
+        <path d="M3,18h18v-2H3V18z M3,13h18v-2H3V13z M3,6v2h18V6H3z" style="fill:#f3f3f3;"></path>
+    </g>
+</g>
+<g id="Grid" display="none">
+    <g display="inline">
+    </g>
+</g>
+</svg>
+				</md-icon>
+			</button>
+
+			<div layout="row" flex class="fill-height" style="max-width: 864px; margin-left: 8px;">
+				<h2 class="md-toolbar-item md-breadcrumb">
+
+					<span class="md-breadcrumb-page ng-binding">load > breadcumbs</span>
+				</h2>
+
 			</div>
-			<div flex></div>
-		</md-content>
-		<md-sidenav class="md-sidenav-right md-whiteframe-z2" md-component-id="right">
-			<md-toolbar class="md-theme-light">
-				<h1 class="md-toolbar-tools">Sidenav Right</h1>
-			</md-toolbar>
-			<md-content ng-controller="RightCtrl" layout-padding>
-				<form>
-					<md-input-container>
-						<label for="testInput">Test input</label>
-						<input type="text" id="testInput"
-									 ng-model="data" md-sidenav-focus>
-					</md-input-container>
-				</form>
-				<md-button ng-click="close()" class="md-primary">
-					Close Sidenav Right
-				</md-button>
-			</md-content>
-		</md-sidenav>
-	</section>
+		</div>
+
+</md-toolbar>
+
+
+<md-content>
+	<div style="max-width: 864px;padding: 16px;">
+		{% block body%}{% endblock %}
+	</div>
+</md-content>
 </div>
+
+
 </body>
 </html>
